tests/rosetta/out/Scala/accumulator-factory.scala
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
object accumulator_factory {
  def accumulator(sum: any): (any) => Any = {
    var store: List[any] = scala.collection.mutable.ArrayBuffer(sum)
    def add(nv: any): any = {
      store(0) = ((store).apply(0)).asInstanceOf[Int] + (nv).asInstanceOf[Int]
      return (store).apply(0)
    }
    return add
  }
  
  def main() = {
    val x = accumulator(1)
    x(5)
    accumulator(3)
    println(x(2.3).toString)
  }
  
  def main(args: Array[String]): Unit = {
    main()
  }
}
